# dynamo-subscriber

./: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  test.sh
.github/workflows/: test.yml
example/: Cargo.toml
example/src/: main.rs
src/: client.rs  error.rs  lib.rs  macros.rs
src/stream/: channel.rs  consumer.rs  dynamodb.rs  mod.rs  producer.rs  streaming.rs
src/stream/mpsc/: mod.rs  stream.rs
src/stream/mpsc/stream/: builder.rs
src/stream/watch/: mod.rs  stream.rs
src/stream/watch/stream/: builder.rs
src/types/: lineage.rs  mod.rs  outputs.rs  shard.rs
tests/: integration_tests.rs
tests/common/: mod.rs
