[package]
name = "dynamo-subscriber"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.74"
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.2.0"
aws-sdk-dynamodbstreams = "1.2.0"
thiserror = "1.0.50"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-stream = "0.1.14"
tracing = "0.1"

[dev-dependencies]
aws-credential-types = { version = "1.0.0", features = ["hardcoded-credentials"] }
aws-smithy-runtime-api = "1.0.1"
aws-smithy-types = "1.0.1"
itertools = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ulid = "1.1.0"
