[package]
name = "dynamo-subscriber"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["kaicoh <sumireminami@gmail.com>"]
keywords = ["aws", "dynamodb", "dynamodbstreams"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaicoh/dynamo-subscriber"
documentation = "https://docs.rs/dynamo-subscriber"
description = "Subscribe DynamoDB Streams as tokio-stream"

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.74"
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.3.0"
aws-sdk-dynamodbstreams = "1.3.0"
thiserror = "1.0.50"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-stream = "0.1.14"
tracing = "0.1"

[dev-dependencies]
aws-credential-types = { version = "1.0.0", features = ["hardcoded-credentials"] }
aws-smithy-runtime-api = "1.0.1"
aws-smithy-types = "1.0.1"
itertools = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ulid = "1.1.0"
